Sửa lỗi sub-menu bị ẩn khi có scrollbar, fix nội dung sub-menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1370,6 +1370,7 @@ select {
   width: min(1240px, 100%);
   padding-top: 54px;
   color: var(--dropdown-text-color);
+  display: none;
 }
 .dropdown__inner {
   --inner-padding: 30px;
@@ -1448,10 +1449,10 @@ select {
 .menu-column__list {
   margin-top: 19px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item--active > .menu-column__link, .menu-column__item:hover > .menu-column__link {
   font-weight: 500;
   color: var(--menu-column-link-color);
 }
