--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -6,7 +6,7 @@
     width: min(1240px, 100%);
     padding-top: 54px;
     color: var(--dropdown-text-color);
-    // display: none;
+    display: none;
 
     &__inner {
         --inner-padding: 30px;
@@ -90,12 +90,15 @@
         margin-top: 19px;
     }
 
-    &__item:hover {
-        .sub-menu {
-            display: grid;
+    &__item {
+        &--active {
+            .sub-menu {
+                display: grid;
+            }
         }
     }
 
+    &__item--active > &__link,
     &__item:hover > &__link {
         font-weight: 500;
         color: var(--menu-column-link-color);
